OD-671 [Fix] Adjusted detail view padding on tablet/web for Directory and Featured List layouts (#648)
* fix detail view of Directory/Featured List padding on tablet/web

* refactor

* refactor

--- a/css/layout-css/small-card-style.upload.css
+++ b/css/layout-css/small-card-style.upload.css
@@ -1242,7 +1242,7 @@
   .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper,
   .small-card-detail-overlay.ready .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper {
     top: 0;
-    padding-top: 0;
+    padding: 20px 15px;
   }
 
   .small-card-detail-overlay.ready .small-card-detail-wrapper .small-card-list-detail-image-wrapper + .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper {
@@ -1252,6 +1252,10 @@
 
   .small-card-detail-wrapper .small-card-list-detail-content-scroll-wrapper {
     position: relative;
+  }
+
+  .small-card-detail-overlay .small-card-detail-wrapper .small-card-list-detail-image-wrapper ~ .small-card-list-detail-content-scroll-wrapper .small-card-list-detail-content-wrapper {
+    padding: 40px;
   }
 }
 
